--- a/vite-app/final.html
+++ b/vite-app/final.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="/src/style.css" />
 </head>
-<body class="no-scroll">
+<body class="no-scroll page-theme page-fade">
   <main>
     <section class="section final final--big" id="final">
       <h1>Will you be my Valentine?</h1>
@@ -21,6 +21,7 @@
         <button id="noBtn" class="ghost">NO 🙃</button>
       </div>
       <p id="yesMessage" class="yes-message hidden">You just made me the happiest person alive. 💞</p>
+      <button id="restartBtn" class="ghost hidden">Restart</button>
       <canvas id="confetti"></canvas>
     </section>
   </main>
