--- a/vite-app/index.html
+++ b/vite-app/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="/src/style.css" />
 </head>
-<body>
+<body class="page-fade">
   <!-- Password Gate -->
   <section id="gate" class="gate">
     <div class="gate__content">
@@ -35,7 +35,7 @@
   </section>
 
   <!-- Main Site -->
-  <main id="mainSite" class="hidden">
+  <main id="mainSite" class="hidden page-theme">
     <!-- Landing / Hero -->
     <section class="section hero" id="home">
       <div class="hero__inner">
