--- a/vite-app/love.html
+++ b/vite-app/love.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="/src/style.css" />
 </head>
-<body class="no-scroll">
+<body class="no-scroll page-theme page-fade">
   <div id="bgMusicWrap" class="bg-music bg-music--hidden">
     <audio
       id="bgAudio"
@@ -24,6 +24,7 @@
   <main class="main--tight">
     <!-- Our Story -->
     <section class="section story" id="story">
+      <div class="story-bg" aria-hidden="true"></div>
       <h2>Our Story</h2>
       <div class="story__grid">
         <!-- Edit the text below for your story -->
