--- a/vite-app/music.html
+++ b/vite-app/music.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="/src/style.css" />
 </head>
-<body class="no-scroll">
+<body class="no-scroll page-theme page-fade">
   <div id="bgMusicWrap" class="bg-music bg-music--hidden">
     <audio
       id="bgAudio"
