--- a/vite-app/photos.html
+++ b/vite-app/photos.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="/src/style.css" />
 </head>
-<body class="no-scroll">
+<body class="no-scroll page-theme page-fade">
   <main>
     <section class="section photos" id="photos">
       <h2>Our Photos</h2>
